--- a/Samples/VideoCaptureSample/CS/MainPage.xaml
+++ b/Samples/VideoCaptureSample/CS/MainPage.xaml
@@ -30,17 +30,20 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Margin="10,0,10,20">
-            <Button x:Name="btn1" Content="Start Capturing" Click="startCapture" Margin="10,10,0,0"></Button>
+            <TextBox Text="Video Preview Window:" Margin="0,0,0,5" TextAlignment="Center" BorderThickness="0"/>
+            <CaptureElement Name="capturePreview" Height="360" Width="360" Margin="10,0,10,10"/>
+            <Button x:Name="btn1" Content="Start Capturing" Click="startCapture" Margin="10,10,0,0"/>
             <Button x:Name="btn2" Content="End Capturing" Click="stopCapture" Margin="10, 10,0,0"/>
             <Button x:Name="btn3" Content="Play Captured Video" Click="playVideo" Margin="10, 10, 0,0"/>
-            <TextBox Text="Video Preview Window:" Margin="0,0,0,5" TextAlignment="Center" BorderThickness="0"/>
-            <CaptureElement Name="capturePreview" Height="120" Margin="10,0,0,10" Width="120"/>
             <TextBox Text="Video Review Window" Margin="10,0,0,5" TextAlignment="Center" BorderThickness="0"/>
+            <Button x:Name="btn4" Content="Start Preview" Click="previewImage" Margin="10,10,0,0"/>
+            <Button x:Name="btn5" Content="Take Picture" Click="takePicture" Margin="10,10,0,0"/>
+            <Button x:Name="btn6" Content="Send Picture" Click="sendPicture" Margin="10,10,0,0"/>
             <MediaElement Name="media"
                           AutoPlay="True" 
                           AreTransportControlsEnabled="False"
-                          Height="120"
-                          Width="120"
+                          Height="360"
+                          Width="360"
                           Margin="0,10,0,10"
                           />
         </StackPanel>
